# GeneMltiAIG

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  ec_expand
include/gene_multi_aig/: aag.hpp  filters.hpp  sub_aig.hpp  validation.hpp
scripts/: batch_expand.sh
src/: aag.cpp  aig_sub_enum.cpp  filters.cpp  main.cpp  sub_aig.cpp  validation.cpp
